resources/less/forum/alternateLayout.less
:root {
  --vote-box-hover-color: #f4f6f8;
  --primary-color: @primary-color;

  & when (@config-dark-mode = true) {
    --vote-box-hover-color: lighten(@body-bg, 8%);
  }
}

.CommentPost.votesAlternativeLayout {
  min-height: 165px;
}

.CommentPost.votesAlternativeLayout.votesUpvotesOnly {
  min-height: 150px;
}

.DiscussionListItem-votes.alternateLayout + .DiscussionListItem-author {
  margin-left: -2px;
  margin-right: 12px;
}

.DiscussionListItem-votes.alternateLayout {
  top: 4px;
}

.Post-votes {
  top: 12px;
}

.DiscussionListItem-votes.alternateLayout,
.Post-votes {
  position: absolute;
  cursor: pointer;

  height: 42px;
  width: 36px;

  left: 0;

  @media @phone {
    left: 8px;
  }

  border-radius: 4px;
  box-shadow: rgba(0, 0, 0, 0.12) 0px 0px 0px 0.5px,
    rgba(0, 0, 0, 0.1) 0px 1px 4px 0px;

  line-height: 24px;

  .LoadingIndicator-container {
    color: @control-color;

    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  button {
    position: relative;
    display: block;

    width: 100%;

    &[data-active] {
      color: var(--primary-color) !important;
    }

    &:hover,
    &:focus,
    &:active {
      background: var(--vote-box-hover-color) !important;
    }

    .icon {
      position: absolute;
      top: 4px;
      left: 50%;
      margin-right: 0;
      transform: translateX(-50%);

      font-size: 1.2em !important;
    }
  }

  &[data-upvotes-only] {
    button {
      height: 100%;
    }

    .DiscussionListItem-voteCount,
    .Post-voteCount {
      position: absolute;
      bottom: 0;
      width: 100%;

      pointer-events: none;
      text-align: center;

      display: block;
      height: 24px;
    }
  }

  &:not([data-upvotes-only]) {
    height: 56px;

    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr auto 1fr;

    line-height: 1;

    span {
      text-align: center;
    }
  }
}

.Post-header .item-votes {
  @media @tablet-up {
    position: absolute;
    left: 34px !important;
    top: 84px !important;
    margin-right: 0;
  }

  @screen-tablet-under: @screen-tablet - 0.01px;

  @media (max-width: @screen-tablet-under) {
    position: relative;
    display: inline-block;
    vertical-align: middle;
  }
}

.hasPane {
  &.panePinned,
  &.paneShowing {
    .DiscussionListItem-votes.alternateLayout {
      left: 6px;
    }
  }
}

.Post--hidden {
  &:not(.revealContent) .Post-actions {
    width: initial;

    .item-votes {
      display: none;
    }
  }
}

.Post-actions {
  width: 100%;
  text-align: right;

  .CommentPost-votes.alternateLayout {
    position: absolute;
    left: 0;

    button {
      padding: 0;
    }

    .Post-points {
      padding: 0 5px;
    }
  }
}

